# KGL

./: .CMakeLists.txt.bak.swp  .gitattributes  Array.cpp  Array.h  CMakeLists.txt  Image.cpp  Image.h  Library.cpp  Library.h  Memory.h  README.md  Test.cpp  Window.cpp  Window.h
cg/: CMakeLists.txt  Cuda.cu  Cuda.h  Test.cpp
cmake/: BuildDocs.cmake  CompileGLSL.cmake  KPackage.cmake
doc/: doxygen.cfg
ext/: CMakeLists.txt
ext/SDL/: CMakeLists.txt
ext/Vulkan/: CMakeLists.txt
linux/: CMakeLists.txt  Linux.cpp  Linux.h  Window.cpp  Window.h
modules/: BuildTarget.cmake  BuildTest.cmake  KPackage.cmake  KTConfig-noconfig.cmake  KTConfig.cmake
scripts/model/: nyx_model.py  nyx_model_converter.py  nyx_model_writer.py  nyx_obj_reader.py
src/: CMakeLists.txt
src/binary/: buffer_reference.h  color_depth.h  sheep.h
src/cg/: CMakeLists.txt  Cuda.cu  Cuda.h  Test.cpp
src/common/: CMakeLists.txt  Parser.cpp  Parser.h
src/event/: CMakeLists.txt  Event.cpp  Event.h
src/kgfile/: CMakeLists.txt  KgFile.cpp  KgFile.h
src/linux/: CMakeLists.txt  Linux.h  Test.cpp  Window.cpp  Window.h
src/loaders/: CMakeLists.txt  NggFile.cpp  NggFile.h  NgtFile.cpp  NgtFile.h  NssFile.cpp  NssFile.h  NttFile.cpp  NttFile.h  NyxFile.cpp
src/nyxfile/: CMakeLists.txt  NyxFile.cpp  NyxFile.h
src/scripts/: nyx_model.py  nyx_model_converter.py  nyx_model_writer.py  nyx_obj_reader.py
src/sdl/: CMakeLists.txt  Test.cpp  Window.cpp
src/shaders/glsl/: CMakeLists.txt
src/shaders/glsl/draw/: draw.frag.glsl
src/shaders/glsl/draw_3d/: CMakeLists.txt  draw_3d.frag.glsl  draw_3d.vert.glsl
src/shaders/glsl/graph_draw_model/: draw_model.frag.glsl  draw_model.vert.glsl
src/shaders/glsl/graph_draw_texture/: draw_tex2d.frag.glsl  draw_tex2d.vert.glsl
src/shaders/glsl/includes/: Nyx.h
src/shaders/glsl/test/: CMakeLists.txt
src/shaders/glsl/test_buffer_reference/: CMakeLists.txt  buffer_reference_test.frag.glsl  buffer_reference_test.vert.glsl
src/shaders/glsl/test_subpass/: color_depth_output.frag.glsl
src/shaders/headers/: buffer_reference.h  color_depth.h  draw.h  draw_3d.h  test_shader.h
src/shaders/test/: test_frag.h  test_vert.h
src/structures/: Material.h  Model.h  SceneGraph.h
src/template/: CMakeLists.txt  List.h
src/vkg/: Buffer.cpp  Buffer.h  CMakeLists.txt  Chain.cpp  Chain.h  CommandBuffer.cpp  CommandBuffer.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Image.cpp  Image.h  Instance.cpp  Instance.h  KgShader.cpp  KgShader.h  Model.h  NyxShader.cpp  NyxShader.h  Pass.cpp  Pass.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  RenderTest.cpp  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  Synchronization.cpp  Synchronization.h  Test.cpp  Vulkan.cpp  Vulkan.h  mainpage.md  stb_image.cpp  (+1 more)
src/win32/: CMakeLists.txt  Test.cpp  Win32.cpp  Win32.h  Window.cpp  Window.h
src/window/: CMakeLists.txt  Test.cpp  Window.cpp  Window.h
vkg/: Buffer.cpp  Buffer.h  CMakeLists.txt  Device.cpp  Image.cpp  Image.h  Instance.cpp  Instance.h  KgShader.cpp  KgShader.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Test.cpp  Vulkan.cpp  Vulkan.h
x11/: CMakeLists.txt  Window.cpp  Window.h  X11.cpp  X11.h
