SET( NYX_COMMON_SOURCES 
     Parser.cpp
   )
      
SET( NYX_COMMON_HEADERS
     Parser.h
   )

SET( NYX_COMMON_INCLUDE_DIRS
   )

SET( NYX_COMMON_LIBRARIES
    )

ADD_LIBRARY               ( nyx_common SHARED  ${NYX_COMMON_SOURCES} ${NYX_COMMON_HEADERS} )
TARGET_LINK_LIBRARIES     ( nyx_common PUBLIC  ${NYX_COMMON_LIBRARIES}                     )
TARGET_INCLUDE_DIRECTORIES( nyx_common PRIVATE ${NYX_COMMON_INCLUDE_DIRS}                  )

INSTALL( FILES  ${NYX_COMMON_HEADERS} DESTINATION ${HEADER_INSTALL_DIR}/common )
INSTALL( TARGETS nyx_common EXPORT Nyx DESTINATION 
             ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}
             RUNTIME  DESTINATION ${EXPORT_LIB_DIR}
             LIBRARY  DESTINATION ${EXPORT_LIB_DIR}
             INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
