SET( KGL_EVENT_SOURCES 
     Event.cpp
   )
      
SET( KGL_EVENT_HEADERS
     Event.h
   )

SET( KGL_EVENT_INCLUDE_DIRS
   )

SET( KGL_EVENT_LIBRARIES
    )

ADD_LIBRARY               ( kgl_event SHARED  ${KGL_EVENT_SOURCES} ${KGL_EVENT_HEADERS} )
TARGET_LINK_LIBRARIES     ( kgl_event PUBLIC  ${KGL_EVENT_LIBRARIES}                    )
TARGET_INCLUDE_DIRECTORIES( kgl_event PRIVATE ${KGL_EVENT_INCLUDE_DIRS}                 )

INSTALL( FILES  ${KGL_LIBRARY_HEADERS} DESTINATION ${INCLUDE_DIR}/event )
INSTALL( TARGETS kgl_event EXPORT kgl DESTINATION 
             ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}/event
             RUNTIME  DESTINATION ${EXPORT_LIB_DIR}/event
             LIBRARY  DESTINATION ${EXPORT_LIB_DIR}/event
             INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
