SET( NYX_EVENT_SOURCES 
     Event.cpp
   )
      
SET( NYX_EVENT_HEADERS
     Event.h
   )

SET( NYX_EVENT_INCLUDE_DIRS
   )

SET( NYX_EVENT_LIBRARIES
    )

ADD_LIBRARY               ( nyx_event SHARED  ${NYX_EVENT_SOURCES} ${NYX_EVENT_HEADERS} )
TARGET_LINK_LIBRARIES     ( nyx_event PUBLIC  ${NYX_EVENT_LIBRARIES}                    )
TARGET_INCLUDE_DIRECTORIES( nyx_event PRIVATE ${NYX_EVENT_INCLUDE_DIRS}                 )

INSTALL( FILES  ${NYX_LIBRARY_HEADERS} DESTINATION ${INCLUDE_DIR}/event )
INSTALL( TARGETS nyx_event EXPORT Nyx DESTINATION 
             ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}
             RUNTIME  DESTINATION ${EXPORT_LIB_DIR}
             LIBRARY  DESTINATION ${EXPORT_LIB_DIR}
             INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
