SET( NYX_LOADERS_SOURCES 
     NyxFile.cpp
     NggFile.cpp
     NssFile.cpp
     NttFile.cpp
     NgtFile.cpp
   )
     
SET( NYX_LOADERS_HEADERS
     NyxFile.h
     NggFile.h
     NssFile.h
     NttFile.h
     NgtFile.h
   )

SET( NYX_LOADERS_INCLUDE_DIRS
   )

SET( NYX_LOADERS_LIBRARIES
    )

ADD_LIBRARY               ( nyx_loaders SHARED   ${NYX_LOADERS_SOURCES} ${NYX_LOADERS_HEADERS} )
TARGET_INCLUDE_DIRECTORIES( nyx_loaders PRIVATE  ${NYX_LOADERS_INCLUDE_DIRS}                   )
TARGET_LINK_LIBRARIES     ( nyx_loaders PUBLIC   ${NYX_LOADERS_LIBRARIES}                      )

INSTALL( FILES  ${NYX_LOADERS_HEADERS} DESTINATION ${HEADER_INSTALL_DIR} COMPONENT devel )
INSTALL( TARGETS nyx_loaders EXPORT Nyx COMPONENT release 
         ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}
         RUNTIME  DESTINATION ${EXPORT_LIB_DIR}
         LIBRARY  DESTINATION ${EXPORT_LIB_DIR}
         INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )