IF( WIN32 )

  SET( NYX_WIN32_SOURCES 
       Win32.cpp
       Window.cpp
     )
        
  SET( NYX_WIN32_HEADERS
       Win32.h
       Window.h
     )
  
  SET( NYX_WIN32_LIBRARIES
        nyx_event 
      )
  
  ADD_LIBRARY               ( nyx_win32 SHARED  ${NYX_WIN32_SOURCES} ${NYX_WIN32_HEADERS} )
  TARGET_LINK_LIBRARIES     ( nyx_win32 PUBLIC  ${NYX_WIN32_LIBRARIES}                    )
  TARGET_INCLUDE_DIRECTORIES( nyx_win32 PRIVATE ${NYX_WIN32_INCLUDE_DIRS}                 )

  BUILD_TEST( TARGET nyx_win32 )

  INSTALL( FILES  ${NYX_WIN32_HEADERS}  DESTINATION  ${INCLUDE_DIR}/win32 )
  INSTALL( TARGETS nyx_win32 EXPORT Nyx 
             ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}
             RUNTIME  DESTINATION ${EXPORT_LIB_DIR}
             LIBRARY  DESTINATION ${EXPORT_LIB_DIR}
             INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
ENDIF()

